css/styles.css
body {
  font-family: 'Alegreya Sans SC', sans-serif;
  background: linear-gradient(-90deg, #DAE2F8, #D6A4A4);
}

.footer {
  right: 0;
  bottom: 0;
  left: 0;
  padding: 1rem;
  text-align: center;
}

.footer .credits {
  font-family: 'Lato', sans-serif;
  width: 100%;
  text-align: center;
  font-size: 13px;
  margin: 0;
}

div.btn-link {
  display: inline;
}

.footer .social-area ul{
  display: block;
  width: 100%;
  padding: 0 25%;
  text-align: center;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
      -ms-box-sizing: border-box;
       -o-box-sizing: border-box;
          box-sizing: border-box;
}

.footer .social-area ul li {
  display: inline-block;
  text-align: center;
  margin-right: 30px;
  line-height: 50px;
}

/*.footer .social-area ul li:last-child {
 margin: 0;
}*/

.footer .social-area ul li a {
  font-family: 'Lato', 'HelveticaNeue', helvetica, arial, sans-serif;
  font-size: 11px;
  font-weight: 600;
  color: black;
  text-transform: uppercase;
}

.footer .shr-btn-twitter:after {
  background: #00aced;
}

a {
  color: white;
  text-decoration: none;
}

#bio {
  height: 50%;
  width: auto;
}

li{
  display: inline;
  font-size: 20px;
}

a:hover {
  color: #cc3700;
  text-decoration: none;
}

a:active {
  color: gold;
}

.main-nav {
  text-align: center;
  padding-top: 10px;
  margin-top: 20px;
  letter-spacing: 0.4em;
}

.icon {
  display: inline-flex;
  text-align: center;
}

.project-tile{
  max-width: 340px;
  min-width: 340px;
  float: left;
  margin 10px;
  justify-content: center;
  opacity: .9;
}

.landingName {
  font-size: 50px;
  color: white;
}

#home-image {
  height: 100%;
  width: 100%;
}

.contact {
  display: table;
}

.about {
  width: 400px;
  text-align: center;
}

.page-footer {
  bottom:0;
  text-align: center;
  width:100%;
  height:60px;
  position: absolute;
}

.home-logo{
  display: inline-flex;
  width: 600px;
  height: 450px;
}

p{
  color: white;
}

/*PROJECTS*/
.project-image {
  height: 300px;
  width: 330px;
  border-radius: 10px;
}

.project-container {
  display: flex;
  justify-content: space-around;
  flex-flow: wrap
  /*align-items: center;*/
  /*align-content: space-around;*/
}

.summary {
  width: 300px;
  margin: 10px auto;
  display: inline-block;
  justify-content: space-around;
  text-align: center;
}

@media screen and (min-width: 200px;) and (max-width: 500px;){
  .project-image {
    height: 300px;
    width: 330px;
    margin-right: auto;
    display: block;
    margin-left: auto;
    align-self: center;
    border-radius: 10px;
  }

  .project-tile{
    opacity: .9;
  }
}

